# virtual_input

./: README.md
VirtualShare_android/: local.properties
VirtualShare_android/app/: CMakeLists.txt  build.gradle
VirtualShare_android/app/src/main/: AndroidManifest.xml
VirtualShare_android/app/src/main/cpp/: native-lib.cpp  suinput.h  vshare-jni.c
VirtualShare_android/app/src/main/java/com/ss/virtualshare/: Injection.java  MainActivity.java
VirtualShare_android/app/src/main/res/layout/: activity_main.xml
VirtualShare_android/app/src/main/res/values/: strings.xml
VirtualShare_android/gradle/wrapper/: gradle-wrapper.properties
virtual_input_python/: compiler.py  connect_manager.py  vinput_main.py
